0032683: Coding Rules, XCAFDoc_Editor::CloneMetaData() - unexpected bitwise operations

Fixed problem with incorrect bitwise operators.
Removed forced naming via cloning metadata